--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "node src/index.js",
 		"dev": "nodemon src/index.js",
+		"build": "webpack --mode production",
 		"webpack": "webpack --mode development --watch",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
